data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1689.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8e\80\80\80\00\01\04\6d\6f\64\32\05\66"
    "\75\6e\63\32\00\00\03\82\80\80\80\00\01\00\0a\8e"
    "\80\80\80\00\01\88\80\80\80\00\00\02\40\10\00\00"
    "\0b\0b"
  )
""
)